Modifying the Images

--- a/KingFahadPrimaryAlumni.html
+++ b/KingFahadPrimaryAlumni.html
@@ -5,12 +5,12 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About - King Islamic Institue School</title>
+    <title>Alumni - King Islamic Institue School</title>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Industry, Products Manufacturing Company, building companies, architecture firms, and the like can take to their advantage by using OxyBuild- Construction Bootstrap 5 Template. With this sophisticated exclusive Construction Bootstrap 5 web template, you can quickly have things in order.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon1.png" />
 
     <!-- CSS
     ============================================ -->
@@ -244,7 +244,7 @@
                 <div class="breadcrumb-content">
                     <span class="breadcrumb-sub-title text-white">Alumins</span>
                     <h1 class="breadcrumb-title mb-1 text-white">Successful Alumnis</h1>
-                    <p class="breadcrumb-desc font-size-20 text-white">Construction of itself, because it is pain some proper style design occur are pleasure</p>
+                    <p class="breadcrumb-desc font-size-20 text-white">Embracing the Future, Connecting Graduates, Inspiring Stories, and Lasting Legacies</p>
                 </div>
             </div>
         </div>
@@ -257,11 +257,10 @@
                     <div class="section-title-wrap style-01">
                         <div class="section-title with-border text-start text-lg-end">
                             <span>Alumins</span>
-                            <h2 class="mb-0">Our Talented Team members</h2>
+                            <h2 class="mb-0">Celebrating the Journey</h2>
                         </div>
                         <div class="section-desc">
-                            <p class="font-size-20 mb-0" style="text-align: justify;">Construction of itself, because it is pain, but 
-                        because some proper style design occur in toil and pain pleasure we have expert team</p>
+                            <p class="font-size-20 mb-0" style="text-align: justify;">Alumni: Embracing the Future, Connecting Graduates, Inspiring Stories, and Lasting Legacies</p>
                         </div>
                     </div>
                 </div>
@@ -1617,8 +1616,7 @@
                                         <img src="assets/images/logo/SecondaryFooter.jpg" alt="Logo">
                                     </a>
                                 </div>
-                                <p class="short-desc font-size-16 mb-5">Construction of itself, because it is are <br>
-                                    but because some proper style design is occur in toil and pain pleasure</p>
+                                <p class="short-desc font-size-16 mb-5 wordtext">At King Fahad Islamic Institute, our aim is not only to impart knowledge but also to nourish hearts and souls.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-2 col-sm-6 pl-xl-80 pt-8 pt-lg-0">
@@ -1648,19 +1646,19 @@
                                 <h3 class="heading text-white mb-6">Quick Links</h3>
                                 <ul class="widget-list-item text-hawkes-blue">
                                     <li>
-                                        <a href="#">Support Center</a>
+                                        <a href="KingFahadPrimaryAlumni.html">Alumins</a>
                                     </li>
                                     <li>
-                                        <a href="#">Offers & Promotion</a>
+                                        <a href="#">Vision 2023</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="#">Primary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payment Method</a>
+                                        <a href="#">Secondary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Clients & Reviews</a>
+                                        <a href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a>
                                     </li>
                                 </ul>
                             </div>
