--- a/KingFahadSecondaryGallery.html
+++ b/KingFahadSecondaryGallery.html
@@ -44,7 +44,7 @@
                             <div class="header-top-left ml-8">
                                 <div class="contact-number">
                                     <img src="assets/images/header/icon/phone.png" alt="Phone Icon">
-                                    <a href="tel://0754709194">0754709194 | 0772666493</a>
+                                    <a href="tel://0754709194">0754709194 | 0394503888</a>
                                 </div>
                             </div>
                         </div>
@@ -103,10 +103,21 @@
                                                             <li class="drop-holder">
                                                                 <a href="KingFahadSecondaryCatering.html">Catering</a>
                                                             </li>
-                                                            
-                                                                <li>
-                                                                    <a href="KingFahadSecondaryEngineering.html">Electricity</a>
-                                                                </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryEngineering.html">Electricity</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryPlumbing.html">Plumbing</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryFashionAndDesign.html">Fashion and Design</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadMotorVechicleMechanics.html">Motor Vechicle Mechanics</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryMetalFabricationWelding.html">Metal Fabrication | Welding</a>
+                                                            </li>
                                                         </ul>
                                                     </li>
                                                 </ul>
@@ -487,7 +498,7 @@
                                             <span class="lightBrown">Kampala, Busega</span> <br>
                                         </p>
                                         <span class="lightBrown">Contacts Secondary : </span>
-                                        <span>0754709194 | 0772666493</span>
+                                        <span>0754709194 | 0394503888</span>
                                     </div>
                                     
                                 </div>
@@ -502,12 +513,12 @@
                         <div class="col-md-6 col-sm-4">
                             <ul class="social-link">
                                 <li class="facebook">
-                                    <a href="#" data-tippy="Facebook" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                    <a href="https://www.facebook.com/p/King-Fahad-Islamic-Senior-Secondary-School-100063971622231/" data-tippy="Facebook" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
                                         <i class="fa fa-facebook"></i>
                                     </a>
                                 </li>
                                 <li class="twitter">
-                                    <a href="#" data-tippy="Twitter" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                    <a href="https://twitter.com/kingfahadbusega" data-tippy="Twitter" data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
                                         <i class="fa fa-twitter"></i>
                                     </a>
                                 </li>
