--- a/FrequentlyAskedQuestions.html
+++ b/FrequentlyAskedQuestions.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Industry, Products Manufacturing Company, building companies, architecture firms, and the like can take to their advantage by using OxyBuild- Construction Bootstrap 5 Template. With this sophisticated exclusive Construction Bootstrap 5 web template, you can quickly have things in order.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon1.png" />
 
     <!-- CSS
     ============================================ -->
@@ -44,7 +44,7 @@
                             <div class="header-top-left ml-8">
                                 <div class="contact-number">
                                     <img src="assets/images/header/icon/phone.png" alt="Phone Icon">
-                                    <a href="tel://0754709194">0754709194 | 0772666493</a>
+                                    <a href="tel://0754709194">0754709194 | 0394503888</a>
                                 </div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
             <div class="container">
                 <div class="breadcrumb-content">
                     <span class="breadcrumb-sub-title text-white">FAQ</span>
-                    <h1 class="breadcrumb-title mb-1 text-white">Frequently Asked Questions</h1>
+                    <h1 class="breadcrumb-title mb-1 text-dark">Frequently Asked Questions</h1>
                     <p class="breadcrumb-desc font-size-20 text-white">Construction of itself, because it is pain some proper style design occur are pleasure</p>
                 </div>
             </div>
@@ -470,8 +470,7 @@
                                         <img src="assets/images/logo/SecondaryFooter.jpg" alt="Logo">
                                     </a>
                                 </div>
-                                <p class="short-desc font-size-16 mb-5">Construction of itself, because it is are <br>
-                                    but because some proper style design is occur in toil and pain pleasure</p>
+                                <p class="short-desc font-size-16 mb-5">At King Fahad Islamic Institute, our aim is not only to impart knowledge but also to nourish hearts and souls.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-2 col-sm-6 pl-xl-80 pt-8 pt-lg-0">
@@ -501,19 +500,19 @@
                                 <h3 class="heading text-white mb-6">Quick Links</h3>
                                 <ul class="widget-list-item text-hawkes-blue">
                                     <li>
-                                        <a href="#">Support Center</a>
+                                        <a href="KingFahadPrimaryAlumni.html">Alumins</a>
                                     </li>
                                     <li>
-                                        <a href="#">Offers & Promotion</a>
+                                        <a href="#">Vision 2023</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="#">Primary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payment Method</a>
+                                        <a href="#">Secondary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Clients & Reviews</a>
+                                        <a href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a>
                                     </li>
                                 </ul>
                             </div>
@@ -527,7 +526,7 @@
                                             <span class="lightBrown">Kampala, Busega</span> <br>
                                         </p>
                                         <span class="lightBrown">Contacts Secondary : </span>
-                                        <span>0754709194 | 0772666493</span>
+                                        <span>0754709194 | 0394503888</span>
                                     </div>
                                     
                                 </div>
