--- a/KingFahadSecondaryCatering.html
+++ b/KingFahadSecondaryCatering.html
@@ -44,7 +44,7 @@
                             <div class="header-top-left ml-8">
                                 <div class="contact-number">
                                     <img src="assets/images/header/icon/phone.png" alt="Phone Icon">
-                                    <a href="tel://0754709194">0754709194 | 0772666493</a>
+                                    <a href="tel://0754709194">0754709194 | 0394503888</a>
                                 </div>
                             </div>
                         </div>
@@ -103,10 +103,21 @@
                                                             <li class="drop-holder">
                                                                 <a href="KingFahadSecondaryCatering.html">Catering</a>
                                                             </li>
-                                                            
-                                                                <li>
-                                                                    <a href="KingFahadSecondaryEngineering.html">Electricity</a>
-                                                                </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryEngineering.html">Electricity</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryPlumbing.html">Plumbing</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryFashionAndDesign.html">Fashion and Design</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadMotorVechicleMechanics.html">Motor Vechicle Mechanics</a>
+                                                            </li>
+                                                            <li>
+                                                                <a href="KingFahadSecondaryMetalFabricationWelding.html">Metal Fabrication | Welding</a>
+                                                            </li>
                                                         </ul>
                                                     </li>
                                                 </ul>
@@ -259,7 +270,7 @@
                     <div class="col-lg-9">
                         <div class="single-service pe-lg-7">
                             <div class="single-service-img">
-                                <img class="img-full" src="assets/images/single-service/ladies3.jpg" alt="Service Image">
+                                <img class="img-full" src="assets/images/single-service/Catering.jpg" alt="Service Image">
                             </div>
                             <div class="single-service-content pt-10 pb-8">
                                 <h3 class="title font-size-60 mb-5 ">Nurturing the Chefs of Tomorrow</h3>
@@ -376,7 +387,7 @@
                                             <span class="lightBrown">Kampala, Busega</span> <br>
                                         </p>
                                         <span class="lightBrown">Contacts Secondary : </span>
-                                        <span>0754709194 | 0772666493</span>
+                                        <span>0754709194 | 0394503888</span>
                                     </div>
                                     
                                 </div>
